force-app/main/default/objects/Order__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cargo</label>
    <referenceTo>Cargo__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>