force-app/main/default/objects/Order__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <label>Delivery Location</label>
    <length>160</length>
    <type>Text</type>
</CustomField>