force-app/main/default/objects/Order__c/fields/Distance_km__c.field-meta.xml
<CustomField>
    <fullName>Distance_km__c</fullName>
    <label>Distance km</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>