force-app/main/default/objects/Order__c/fields/End_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Delivery_Date__c</fullName>
    <label>End Delivery Date</label>
    <type>DateTime</type>
</CustomField>