force-app/main/default/objects/Order__c/fields/Estimated_Price__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Price__c</fullName>
    <formula>Distance_km__c * 1.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>