force-app/main/default/objects/Order__c/fields/Financial_Manager__c.field-meta.xml
<CustomField>
    <fullName>Financial_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Manager</label>
    <referenceTo>Financial_Manager__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>