force-app/main/default/objects/Order__c/fields/Logistician__c.field-meta.xml
<CustomField>
    <fullName>Logistician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logistician</label>
    <referenceTo>Logistician__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>