force-app/main/default/objects/Order__c/fields/Pick_Up_Location__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Location__c</fullName>
    <label>Pick Up Location</label>
    <length>160</length>
    <type>Text</type>
</CustomField>