force-app/main/default/objects/Order__c/fields/Start_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Delivery_Date__c</fullName>
    <label>Start Delivery Date</label>
    <type>DateTime</type>
</CustomField>