force-app/main/default/objects/Order__c/fields/Statud__c.field-meta.xml
<CustomField>
    <fullName>Statud__c</fullName>
    <label>Statud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>