force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cargo__c</columns>
    <columns>Client__c</columns>
    <columns>Driver__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Statud__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>